# dremio-accelerated

./: .gitignore  Installation.md  NativeFilter.cpp  README.md  pom.xml
.github/workflows/: assets.yml  test.yml
common/src/main/java/com/dremio/test/: DremioTest.java
contrib/hive2-exec-shade/: pom.xml
contrib/hive3-exec-shade/: pom.xml
dac/daemon/src/main/java/com/dremio/dac/daemon/: DremioDaemon.java
distribution/server/: pom.xml
docker/: Dockerfile
native/: CMakeLists.txt  Makefile  apache-arrow-archive-keyring-latest-focal.deb
native/src/: FletcherFilter.cpp  NativeFilter.cpp  NativeFletcher.cpp  TidreFilter.cpp  com_dremio_sabot_op_filter_FilterTemplateAccelerated.h  com_dremio_sabot_op_project_FletcherFilterProjectOperator.h  tidre.h
native/src/jni/: Assertions.cpp  Assertions.h  Converters.cpp  Converters.h  JNILoader.cpp  JavaMemoryPool.cpp  JavaMemoryPool.h  JavaResizableBuffer.cpp  JavaResizableBuffer.h  ProtobufSchemaDeserializer.cpp  ProtobufSchemaDeserializer.h
provision/yarn/yarntwill/: pom.xml
sabot/kernel/: pom.xml
sabot/kernel/src/main/java/com/dremio/: BaseTestQuery.java  DremioTestWrapper.java  QueryTestUtil.java  TestBuilder.java
sabot/kernel/src/main/java/com/dremio/exec/: ExecConstants.java  ExecTest.java
sabot/kernel/src/main/java/com/dremio/exec/expr/: ExpressionSplitter.java  SplitStageExecutor.java
sabot/kernel/src/main/java/com/dremio/exec/physical/base/: AbstractPhysicalVisitor.java  PhysicalVisitor.java
sabot/kernel/src/main/java/com/dremio/exec/physical/config/: AcceleratedFilter.java  FletcherFilterProject.java
sabot/kernel/src/main/java/com/dremio/exec/planner/: BenchmarkAcceleratedQuery.java  PlannerPhase.java
sabot/kernel/src/main/java/com/dremio/exec/planner/logical/: AcceleratedFilterRel.java  AcceleratedFilterRule.java  FilterRule.java
sabot/kernel/src/main/java/com/dremio/exec/planner/physical/: AcceleratedFilterPrel.java  AcceleratedFilterPrule.java  BigFletcherPrule.java  FletcherFilterPrel.java  FletcherFilterProjectPrel.java  FletcherFilterProjectPrule.java  FletcherFilterPrule.java  FletcherPrel.java  FletcherPrule.java  PlannerSettings.java
sabot/kernel/src/main/java/com/dremio/sabot/driver/: SmartOp.java
sabot/kernel/src/main/java/com/dremio/sabot/exec/context/: OperatorStats.java
sabot/kernel/src/test/java/com/dremio/exec/planner/: TestAcceleratedQuery.java
sabot/kernel/src/test/java/com/dremio/sabot/filter/: TestSimpleFilter.java
sabot/kernel/src/test/resources/: Taxi_Trips_300.parquet
sabot/vector-tools/src/main/java/com/dremio/exec/record/: VectorContainer.java
usecases/filter-streamaggregate/: README.md
usecases/regex-filter/: README.md
usecases/regex-tweets/: README.md
usecases/tpch-query6/: README.md
(+15 files in other folders)
